--- a/foo_httpcontrol/readme.html
+++ b/foo_httpcontrol/readme.html
@@ -11,7 +11,7 @@
 </style>	
 </head>
 <body>
-<h2>foo_httpcontrol 0.97.11 20 Jul 2011</h2>
+<h2>foo_httpcontrol 0.97.12 14 Aug 2011</h2>
 <p><a href="http://code.google.com/p/foo-httpcontrol/">http://code.google.com/p/foo-httpcontrol</a></p>
 
 <h2 id="warn">Warning/disclaimer: this software comes without any warranties at all. It is still in the very early development stage, and so on, and so forth, blah-blah-blah.
@@ -74,6 +74,12 @@ Don't forget to press Apply or your changes won't have any effect until fb2k is 
 <a href="http://www.hydrogenaudio.org/forums/index.php?showtopic=62218">http://www.hydrogenaudio.org/forums/index.php?showtopic=62218</a></p>
 
 <h2>Changes history 2011</h2> 
+
+<p>v0.97.12 14 Aug</p>
+<ul>
+<li>add: hide password text in Preferences;</li>
+<li>fix: http protocol items left out when adding items using Browse cmd. it's now possible to "Add location" too by specifying url in Browse cmd param1;</li>
+</ul>
 
 <p>v0.97.11 20 Jul</p>
 <ul>
