--- a/trunk/foo_httpcontrol/readme.html
+++ b/trunk/foo_httpcontrol/readme.html
@@ -11,7 +11,7 @@
 </style>	
 </head>
 <body>
-<h2>foo_httpcontrol 0.97.13 27 Jan 2013</h2>
+<h2>foo_httpcontrol 0.97.14 02 Mar 2014</h2>
 <p><a href="http://code.google.com/p/foo-httpcontrol/">http://code.google.com/p/foo-httpcontrol</a></p>
 
 <h2 id="warn">Warning/disclaimer: this software comes without any warranties at all. It is still in the very early development stage, and so on, and so forth, blah-blah-blah.
@@ -73,7 +73,16 @@ Don't forget to press Apply or your changes won't have any effect until fb2k is 
 <p>Discussion thread (please post all your questions and  suggestions  here):
 <a href="http://www.hydrogenaudio.org/forums/index.php?showtopic=62218">http://www.hydrogenaudio.org/forums/index.php?showtopic=62218</a></p>
 
+<h2>Changes history 2014</h2> 
+<p>v0.97.14 02 Mar</p>
+<ul>
+<li>add: Implemented natural sorting (StrCmpLogicalW) in file browser and media library query;</li>
+<li>fix: A few fixes discovered by awesome CppCat static analyzer software;</li>
+<li>fix: (Probably) got rid of not very rare exception happening in file browser;</li>
+</ul>
+
 <h2>Changes history 2013</h2> 
+<p>v0.97.13 21 Jan</p>
 <ul>
 <li>add: Sort command renamed to SortAscending, old name still supported;</li>
 <li>add: SortDescending command, essentially the same as SortAscending but sorting result is reversed;</li>
