--- a/trunk/foo_httpcontrol/readme.html
+++ b/trunk/foo_httpcontrol/readme.html
@@ -11,7 +11,7 @@
 </style>	
 </head>
 <body>
-<h2>foo_httpcontrol 0.97.14 02 Mar 2014</h2>
+<h2>foo_httpcontrol 0.97.15 02 Mar 2014</h2>
 <p><a href="http://code.google.com/p/foo-httpcontrol/">http://code.google.com/p/foo-httpcontrol</a></p>
 
 <h2 id="warn">Warning/disclaimer: this software comes without any warranties at all. It is still in the very early development stage, and so on, and so forth, blah-blah-blah.
@@ -74,6 +74,13 @@ Don't forget to press Apply or your changes won't have any effect until fb2k is 
 <a href="http://www.hydrogenaudio.org/forums/index.php?showtopic=62218">http://www.hydrogenaudio.org/forums/index.php?showtopic=62218</a></p>
 
 <h2>Changes history 2014</h2> 
+<p>v0.97.15 02 Mar</p>
+<ul>
+<li>add: Seek command renamed to SeekPercent, old name still works;</li>
+<li>add: SeekDelta command renamed to SeekSecondDelta, old name still works;</li>
+<li>add: SeekSecond command, seek with a second precision;</li>
+</ul>
+
 <p>v0.97.14 02 Mar</p>
 <ul>
 <li>add: Implemented natural sorting (StrCmpLogicalW) in file browser and media library query;</li>
@@ -360,11 +367,15 @@ example: ?cmd=PlayingCommand&amp;param1=Playback%20Statistics%2FRating%2F3</li>
         param1=signed delta, -N...N (-N/10...N/10 db)</li>
 
 <li>Seek playing item by percentage<br/>
-        cmd=Seek<br/>
+        cmd=SeekPercent<br/>
         param1=position, from 0 to 100 (percent)</li>
 
+<li>Seek playing item by seconds<br/>
+        cmd=SeekSecond<br/>
+        param1=seconds (signed integer)</li>
+
 <li>Seek playing item by delta seconds<br/>
-        cmd=SeekDelta<br/>
+        cmd=SeekSecondDelta<br/>
         param1=seconds (signed integer)</li>
 
 <li>Empty active playlist<br/>
